<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cordcalculator.StartingScreenActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/welcome_text_view"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/full_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/welcome_text_view" />

    <ImageView
        android:id="@+id/full_logo"
        android:src="@drawable/bobbiny_full_logo"
        app:layout_constraintBottom_toTopOf="@+id/motto_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        style="@style/full_logo_image_view" />

    <TextView
        android:id="@+id/motto_text_view"
        android:text="@string/motto_text"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_logo"
        style="@style/motto_text_view"/>

    <Button
        android:id="@+id/button_start"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motto_text_view"
        style="@style/button_start"
        android:onClick="startProcess"/>

</android.support.constraint.ConstraintLayout>
